Add unit tests for PlayerServiceImpl