@@ -32,4 +32,6 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+
+	jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
